user update table alignment fix
added font to login greeting

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ text-align:left;
 padding-left:25px;
 padding-top:10px;
 padding-bottom:10px;
-color: #6A0020;
+color: #6a0020;
 font-family:Verdana, Arial, Helvetica, sans-serif;
 font-size:22px;
 font-weight:bold;
@@ -78,7 +78,6 @@ font-weight:bold;
 
 .articleContent
 {
-	width:500px;
 	position:relative;
 	color: black;
 	text-align:left;
